--- a/index.html
+++ b/index.html
@@ -2,86 +2,195 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>INFEX VX</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VXcoin Hacker Dashboard</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
     body {
       margin: 0;
-      background: linear-gradient(145deg, #000000, #001100);
+      padding: 0;
+      background: #000;
+      color: #0f0;
       font-family: 'Press Start 2P', monospace;
-      color: #00ff99;
       overflow: hidden;
     }
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 30px 10px;
+      padding: 20px;
+      max-width: 600px;
+      margin: 0 auto;
     }
-
     h1 {
-      font-size: 16px;
-      text-shadow: 0 0 5px #00ff99;
-      margin-bottom: 40px;
+      font-size: 24px;
+      margin-bottom: 10px;
+      animation: flicker 1s infinite;
+    }
+    @keyframes flicker {
+      0%, 49%, 100% { opacity: 1; }
+      50%, 99% { opacity: 0.3; }
     }
 
-    button {
-      background: #003300;
-      border: 2px solid #00ff99;
-      color: #00ff99;
-      padding: 14px 24px;
-      margin: 10px;
-      font-size: 10px;
-      font-family: 'Press Start 2P', monospace;
-      text-transform: uppercase;
-      cursor: pointer;
-      box-shadow: 0 0 10px #00ff99;
-      transition: 0.2s;
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      margin: 10px 0;
     }
-
-    button:hover {
-      background: #004d00;
-      box-shadow: 0 0 20px #00ff99;
-    }
-
-    .status {
-      margin-top: 20px;
-      font-size: 10px;
+    .box {
+      border: 2px solid #0f0;
+      padding: 10px;
+      width: 45%;
       text-align: center;
-      max-width: 90%;
+      background: rgba(0,150,0,0.1);
+    }
+    button {
+      margin: 5px;
+      padding: 10px 20px;
+      background: transparent;
+      color: #0f0;
+      border: 2px solid #0f0;
+      cursor: pointer;
+      font-size: 12px;
+    }
+    button:hover {
+      background: #0f0;
+      color: #000;
+      animation: pulse 1s infinite alternate;
+    }
+    @keyframes pulse {
+      from { box-shadow: 0 0 10px #0f0; }
+      to { box-shadow: 0 0 20px #0f0; }
+    }
+    .robot {
+      margin-top: 20px;
+      width: 80px;
+      animation: bob 2s infinite ease-in-out;
+    }
+    @keyframes bob {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    .tabs {
+      margin-top: 20px;
+      width: 100%;
+      display: flex;
+    }
+    .tab {
+      flex: 1;
+      padding: 10px;
+      border: 2px solid #0f0;
+      text-align: center;
+      cursor: pointer;
+      background: #001600;
+    }
+    .tab.active {
+      background: #003200;
+    }
+    .tab-content {
+      border: 2px solid #0f0;
+      padding: 15px;
+      margin-top: -2px;
+      width: 100%;
+      min-height: 150px;
+      background: #000;
+    }
+    .hidden { display: none; }
+    a {
+      color: #0f0;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>INFEX VX SYSTEM</h1>
-    <button onclick="connectWallet()">Connect Wallet</button>
-    <button onclick="shareTelegram()">Share</button>
-    <div class="status" id="statusText">Wallet not connected</div>
+    <h1>VXcoin Hacker Dashboard</h1>
+    <div class="stats">
+      <div class="box" id="coinsBox">Coins: <span id="coins">0</span></div>
+      <div class="box" id="usdBox">≈ $<span id="usd">0.00</span></div>
+    </div>
+    <div class="stats">
+      <div class="box">Referrals: <span id="refs">0</span></div>
+      <div class="box">Days Left: <span id="daysLeft">145</span></div>
+    </div>
+
+    <div class="tabs">
+      <div class="tab active" data-tab="main">Main</div>
+      <div class="tab" data-tab="tasks">Tasks</div>
+    </div>
+
+    <div class="tab-content" id="main">
+      <p>Invite people via your link:</p>
+      <input type="text" id="refLink" readonly style="width:100%;padding:5px;background:#001600;color:#0f0;border:1px solid #0f0;">
+      <button id="claimBtn">Claim VXcoin</button>
+    </div>
+
+    <div class="tab-content hidden" id="tasks">
+      <p>Tasks:</p>
+      <ul>
+        <li>Subscribe on Telegram – <button class="taskBtn">Go</button></li>
+        <!-- Добавляй сюда задачи -->
+      </ul>
+    </div>
+
+    <img src="https://via.placeholder.com/80x80.png?text=🤖" alt="robot" class="robot">
+
   </div>
 
   <script>
-    async function connectWallet() {
-      if (window.ethereum) {
-        try {
-          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-          document.getElementById("statusText").innerText = "Connected: " + accounts[0];
-        } catch (err) {
-          document.getElementById("statusText").innerText = "Connection rejected.";
-        }
-      } else {
-        document.getElementById("statusText").innerText = "MetaMask not installed.";
-      }
+    const coinsEl = document.getElementById('coins');
+    const usdEl = document.getElementById('usd');
+    const refsEl = document.getElementById('refs');
+    const daysLeftEl = document.getElementById('daysLeft');
+    const refLinkEl = document.getElementById('refLink');
+    const claimBtn = document.getElementById('claimBtn');
+    const tabs = document.querySelectorAll('.tab');
+    const contents = document.querySelectorAll('.tab-content');
+
+    let coins = 0;
+    let refs = 0;
+    let daysLeft = 145;
+    const COIN_PRICE = 0.25;
+
+    // Генерация реферальной ссылки
+    refLinkEl.value = window.location.href + '?ref=YOUR_ID';
+
+    tabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        tabs.forEach(t=>t.classList.remove('active'));
+        contents.forEach(c=>c.classList.add('hidden'));
+        tab.classList.add('active');
+        document.getElementById(tab.dataset.tab).classList.remove('hidden');
+      });
+    });
+
+    claimBtn.addEventListener('click', () => {
+      // Здесь вызов UI кошелька
+      alert('Connect your Telegram wallet (placeholder)');
+    });
+
+    function updateStats() {
+      coins = refs; // 1 монета за реф
+      let usd = (coins * COIN_PRICE).toFixed(2);
+      coinsEl.textContent = coins;
+      refsEl.textContent = refs;
+      usdEl.textContent = usd;
+      daysLeftEl.textContent = daysLeft;
     }
 
-    function shareTelegram() {
-      const url = encodeURIComponent(window.location.href);
-      const tgShareLink = `https://t.me/share/url?url=${url}&text=Check%20out%20INFEX%20VX`;
-      window.open(tgShareLink, '_blank');
-    }
+    // Симуляция роста людей
+    setInterval(() => {
+      refs += Math.random() < 0.1 ? 1 : 0;
+      updateStats();
+    }, 3000);
+
+    // Таймер в днях
+    setInterval(() => {
+      if (daysLeft > 0) { daysLeft--; updateStats(); }
+    }, 10000);
+
+    updateStats();
   </script>
 </body>
 </html>
