--- a/index.html
+++ b/index.html
@@ -167,7 +167,12 @@
     <div id="tasksTab" class="tab-content">
       <p><strong>Tasks to earn coins:</strong></p>
       <ul>
-        <li>Subscribe to Telegram – <button class="taskBtn">Go</button></li>
+        <li>Subscribe to Telegram – 
+  <a href="https://t.me/+vWn1fZWIOL82NmMy">
+    <button class="taskBtn">Go</button>
+  </a>
+</li>
+
         <li>Join Discord – <button class="taskBtn">Go</button></li>
         <li>Follow on Twitter – <button class="taskBtn">Go</button></li>
       </ul>
