--- a/index.html
+++ b/index.html
@@ -1,142 +1,380 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>VXcoin Hacker Portal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-    *{margin:0;padding:0;box-sizing:border-box;}
-    html,body{height:100%;background:#000;font-family:'Press Start 2P',monospace;color:#0f0;overflow:hidden;}
-    body::before{content:"";position:fixed;top:0;left:0;width:100%;height:100%;
-      background:url('https://i.imgur.com/7YJH2Cz.png') center/cover no-repeat;
-      opacity:0.1;z-index:0;}
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>VXcoin Hacker Portal - Advanced</title>
+<style>
+  /* ====== BASE ====== */
+  @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-    .container{position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;padding:20px;}
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html, body {
+    height: 100%;
+    background: #000;
+    color: #0f0;
+    font-family: 'Press Start 2P', monospace;
+    overflow: hidden;
+    user-select: none;
+  }
 
-    /* TIMER */
-    .timer-bar{width:100%;padding:8px;background:#100; color:#f00; text-align:center;
-      animation: blink 1s infinite;}
-    @keyframes blink{0%,100%{opacity:1;}50%{opacity:0.6;}}
+  /* ====== BACKGROUND ====== */
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: linear-gradient(45deg, #003300 15%, #000 50%, #003366 85%);
+    opacity: 0.15;
+    z-index: 0;
+    animation: bgGlitch 20s linear infinite;
+  }
 
-    /* STATS GRID */
-    .stats{display:flex;flex-wrap:wrap;gap:10px;margin:15px 0;}
-    .stat{flex:1 1 120px;padding:10px;background:#001100;border:2px solid #0f0;text-align:center;
-      animation: glow 2s infinite;}
-    .stat.red{background:#220000;border-color:#f00;color:#f00;}
-    .stat.blue{background:#000022;border-color:#0ff;color:#0ff;}
-    @keyframes glow{0%,100%{box-shadow:0 0 5px;}50%{box-shadow:0 0 15px #0f0;}}
+  @keyframes bgGlitch {
+    0% {background-position: 0 0;}
+    50% {background-position: 100% 100%;}
+    100% {background-position: 0 0;}
+  }
 
-    /* ACTION BUTTONS */
-    .actions{display:flex;flex-wrap:wrap;gap:10px;margin-bottom:15px;}
-    .actions button{flex:1 1 140px;padding:10px;background:#000;border:2px solid #0f0;
-      color:#0f0;cursor:pointer;transition:0.2s;}
-    .actions button:hover{background:#0f0;color:#000;box-shadow:0 0 8px #0f0;}
+  /* ====== CONTAINER ====== */
+  #app {
+    position: relative;
+    z-index: 10;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(4px);
+  }
 
-    /* CONSOLE */
-    .console{flex:1;background:#000;border:2px solid #0f0;padding:10px;overflow-y:auto;
-      font-size:10px;line-height:14px;margin-bottom:15px;}
-    .console-line{color:#0f0;margin-bottom:2px;}
+  /* ====== HEADER / TIMER ====== */
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 15px;
+    border-bottom: 2px solid #0f0;
+    position: relative;
+  }
+  header h1 {
+    font-size: 1.3rem;
+    letter-spacing: 2px;
+    color: #0f0;
+    text-shadow: 0 0 6px #0f0;
+  }
+  #timer {
+    font-size: 0.85rem;
+    color: #0f0;
+    font-weight: bold;
+    user-select: none;
+    position: relative;
+  }
 
-    /* TASKS */
-    .tasks{background:#001a00;border:2px solid #0f0;padding:10px;margin-bottom:15px;}
-    .task{display:flex;justify-content:space-between;align-items:center;margin:5px 0;}
-    .task a{background:#0ff;color:#000;padding:5px 8px;text-decoration:none;border:2px solid #0ff;
-      font-size:10px;transition:0.2s;}
-    .task a:hover{background:#000;color:#0ff;}
+  /* Timer Progress Bar */
+  #timerProgressBar {
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+    height: 4px;
+    background: linear-gradient(90deg, #0f0, #0ff, #00f);
+    border-radius: 3px;
+    width: 0%;
+    filter: drop-shadow(0 0 6px #0f0);
+  }
 
-    /* ROBOT */
-    .robot{position:fixed;bottom:0;left:0;width:200px;opacity:0.9;z-index:2;
-      animation: float 3s ease-in-out infinite;}
-    @keyframes float{0%,100%{transform:translateY(0);}50%{transform:translateY(-8px);}}
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="timer-bar" id="timer">Time left: 145d 00h 00m 00s</div>
-    <div class="stats">
-      <div class="stat">🪙 Coins<br><span id="coins">0</span></div>
-      <div class="stat">💵 USD<br>$<span id="usd">0.00</span></div>
-      <div class="stat red">🔗 Refs<br><span id="refs">0</span></div>
-      <div class="stat blue">📈 Rate<br><span id="rate">0.00</span></div>
-    </div>
-    <div class="actions">
-      <button id="connectBtn">Connect Wallet</button>
-      <button id="claimBtn">Claim 1 VXcoin</button>
-      <button id="copyLinkBtn">Copy Ref Link</button>
-    </div>
-    <div class="tasks">
-      <div class="task">
-        <span>Subscribe Telegram Channel</span>
-        <a href="https://t.me/+vWn1fZWIOL82NmMy" target="_blank" class="taskBtn">Go</a>
-      </div>
-      <div class="task">
-        <span>Invite Friends</span>
-        <button id="inviteBtn" class="taskBtn">Invite</button>
-      </div>
-    </div>
-    <div class="console" id="console"></div>
-  </div>
-  <img src="https://i.imgur.com/XLDX2jQ.png" alt="robot" class="robot">
+  /* ====== MAIN LAYOUT ====== */
+  main {
+    flex: 1;
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+    overflow: hidden;
+  }
 
-  <script>
-    const coinsEl = document.getElementById('coins'),
-          usdEl = document.getElementById('usd'),
-          refsEl = document.getElementById('refs'),
-          rateEl = document.getElementById('rate'),
-          timerEl = document.getElementById('timer'),
-          consoleEl = document.getElementById('console'),
-          copyBtn = document.getElementById('copyLinkBtn'),
-          claimBtn = document.getElementById('claimBtn'),
-          connectBtn = document.getElementById('connectBtn'),
-          inviteBtn = document.getElementById('inviteBtn');
+  /* ====== LEFT PANEL ====== */
+  #leftPanel {
+    flex: 0 0 320px;
+    background: #001a00;
+    border: 2px solid #0f0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    box-shadow: 0 0 10px #0f0 inset;
+    position: relative;
+  }
 
-    let coins=0, refs=0;
-    let endTime = Date.now() + 145*24*3600*1000;
-    const COIN_PRICE = 0.25;
+  /* User info */
+  #userInfo {
+    border-bottom: 2px solid #0f0;
+    padding-bottom: 10px;
+  }
+  #userInfo h2 {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+  #userCoins {
+    font-size: 1.4rem;
+    color: #0f0;
+    text-shadow: 0 0 8px #0f0;
+  }
+  #userUSD {
+    font-size: 0.8rem;
+    color: #0ff;
+    font-weight: bold;
+    margin-top: 4px;
+  }
 
-    const refLink = window.location.href + '?ref=YOUR_ID';
+  /* Connect button */
+  #connectWalletBtn {
+    margin-top: 15px;
+    padding: 10px 15px;
+    background: transparent;
+    border: 2px solid #0f0;
+    color: #0f0;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    user-select: none;
+    filter: drop-shadow(0 0 10px #0f0);
+  }
+  #connectWalletBtn:hover {
+    background: #0f0;
+    color: #000;
+    box-shadow: 0 0 10px #0f0;
+  }
 
-    function log(msg){
-      const d = new Date().toLocaleTimeString();
-      consoleEl.innerHTML += `<div class="console-line">[${d}] ${msg}</div>`;
-      consoleEl.scrollTop = consoleEl.scrollHeight;
-    }
+  /* Referral Link */
+  #referralSection {
+    margin-top: 20px;
+  }
+  #referralLabel {
+    font-size: 0.75rem;
+    margin-bottom: 6px;
+  }
+  #referralLink {
+    width: 100%;
+    padding: 6px 8px;
+    background: #000;
+    border: 1px solid #0f0;
+    color: #0f0;
+    font-size: 0.7rem;
+    letter-spacing: 1px;
+    user-select: all;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  #referralLink:hover {
+    background: #0f0;
+    color: #000;
+  }
 
-    function updateStats(){
-      usdEl.textContent = (coins*COIN_PRICE).toFixed(2);
-      rateEl.textContent = (coins/145).toFixed(2);
-      coinsEl.textContent = coins;
-      refsEl.textContent = refs;
-    }
+  /* Copy button */
+  #copyReferralBtn {
+    margin-top: 6px;
+    padding: 8px 0;
+    background: transparent;
+    border: 2px solid #0ff;
+    color: #0ff;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+    user-select: none;
+    filter: drop-shadow(0 0 6px #0ff);
+    transition: all 0.3s ease;
+  }
+  #copyReferralBtn:hover {
+    background: #0ff;
+    color: #000;
+    box-shadow: 0 0 10px #0ff;
+  }
 
-    function updateTimer(){
-      let diff = endTime - Date.now();
-      if(diff<0) diff=0;
-      const d = Math.floor(diff/864e5),
-            h = Math.floor(diff%864e5/3600000),
-            m = Math.floor(diff%3600000/60000),
-            s = Math.floor(diff%60000/1000);
-      timerEl.textContent = `Time left: ${d}d ${h}h ${m}m ${s}s`;
-      requestAnimationFrame(updateTimer);
-    }
+  /* Stats Boxes */
+  .statBox {
+    background: #001a00;
+    border: 2px solid #0f0;
+    padding: 15px 12px;
+    font-size: 0.85rem;
+    box-shadow: 0 0 8px #0f0 inset;
+    text-align: center;
+    user-select: none;
+  }
+  .statBox.red {
+    border-color: #f00;
+    color: #f00;
+    box-shadow: 0 0 12px #f00 inset;
+  }
+  .statBox.blue {
+    border-color: #0ff;
+    color: #0ff;
+    box-shadow: 0 0 12px #0ff inset;
+  }
 
-    connectBtn.onclick = () => log('Wallet connect flow here...');
-    copyBtn.onclick = () => {
-      navigator.clipboard.writeText(refLink);
-      log('Referral link copied!');
-    };
-    claimBtn.onclick = () => {
-      coins++; refs++; updateStats(); log('1 VXcoin claimed');
-    };
-    inviteBtn.onclick = () => {
-      window.open(refLink, '_blank');
-      log('Invite link opened');
-    };
+  /* ====== RIGHT PANEL ====== */
+  #rightPanel {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background: #001a00;
+    border: 2px solid #0f0;
+    padding: 20px;
+    box-shadow: 0 0 15px #0f0 inset;
+    overflow-y: auto;
+  }
 
-    updateStats();
-    updateTimer();
-    log('Dashboard ready');
-  </script>
-</body>
-</html>
+  /* Tabs navigation */
+  #tabsNav {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 15px;
+  }
+  .tabBtn {
+    flex: 1;
+    background: transparent;
+    border: 2px solid #0f0;
+    color: #0f0;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px 0;
+    text-align: center;
+    user-select: none;
+    transition: background 0.3s ease;
+  }
+  .tabBtn:hover {
+    background: #0f0;
+    color: #000;
+  }
+  .tabBtn.active {
+    background: #0f0;
+    color: #000;
+    box-shadow: 0 0 12px #0f0;
+    cursor: default;
+  }
+
+  /* Tab content */
+  .tabContent {
+    flex: 1;
+    background: #000;
+    border: 2px solid #0f0;
+    padding: 12px;
+    overflow-y: auto;
+    font-size: 11px;
+    line-height: 1.3em;
+    color: #0f0;
+    box-shadow: 0 0 10px #0f0 inset;
+  }
+
+  /* Tasks */
+  #tasksList {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .taskItem {
+    background: #002200;
+    border: 2px solid #0f0;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    user-select: none;
+    transition: background 0.3s ease;
+  }
+  .taskItem.red {
+    border-color: #f00;
+    background: #220000;
+    color: #f00;
+  }
+  .taskItem.blue {
+    border-color: #0ff;
+    background: #002233;
+    color: #0ff;
+  }
+  .taskItem button, .taskItem a {
+    cursor: pointer;
+    padding: 6px 10px;
+    border: 2px solid currentColor;
+    background: transparent;
+    font-weight: bold;
+    transition: background 0.2s ease;
+    text-decoration: none;
+    color: inherit;
+  }
+  .taskItem button:hover, .taskItem a:hover {
+    background: currentColor;
+    color: #000;
+  }
+
+  /* Console log */
+  #consoleLog {
+    height: 200px;
+    background: #000;
+    border: 2px solid #0f0;
+    padding: 10px;
+    overflow-y: auto;
+    font-size: 9px;
+    line-height: 1.2em;
+    color: #0f0;
+    box-shadow: 0 0 8px #0f0 inset;
+    user-select: none;
+  }
+  #consoleLog .logLine {
+    margin-bottom: 3px;
+  }
+
+  /* Buttons in actions panel */
+  #actionsPanel {
+    display: flex;
+    gap: 12px;
+    justify-content: space-around;
+    margin-top: 10px;
+  }
+  #actionsPanel button {
+    flex: 1;
+    background: transparent;
+    border: 2px solid #0f0;
+    color: #0f0;
+    padding: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    user-select: none;
+    transition: all 0.3s ease;
+    filter: drop-shadow(0 0 5px #0f0);
+  }
+  #actionsPanel button:hover {
+    background: #0f0;
+    color: #000;
+    box-shadow: 0 0 10px #0f0;
+  }
+
+  /* ROBOT IMAGE */
+  #robot {
+    position: fixed;
+    bottom: 0;
+    left: 10px;
+    width: 220px;
+    opacity: 0.8;
+    z-index: 5;
+    filter: drop-shadow(0 0 10px #0f0);
+    animation: floatBot 4s ease-in-out infinite;
+    user-select: none;
+  }
+  @keyframes floatBot {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-12px); }
+  }
+
+  /* GLITCH text effect */
+  .glitch {
+    position: relative;
+    color: #0f0;
+    font-weight: 900;
+    letter-spacing: 2px;
+    animation: glitchAnim 2s infinite;
+  }
+  .glitch::before, .glitch::
